--- a/standardstyle.css
+++ b/standardstyle.css
@@ -1,7 +1,7 @@
 /* THIS IS THE STANDARD STYLE SHEET FOR JACOB DAUPHINAIS WEBSITE */
 
 body {
-  background-color: beige;
+  background-color: purple;
 }
 
 h1 {
