--- a/testsites/standardstyle.css
+++ b/testsites/standardstyle.css
@@ -6,14 +6,17 @@ body {
 
 h1 {
   color: navy;
-  margin: left;
-  margin: right;
   width: 800px;
   text-align: center;
 }
 
 p {
   color: blue;
+  width: 800px;
+}
+
+#main-body {
+  background-color: #DAFFFF;
   margin: left;
   margin: right;
   width: 800px;
