--- a/testsites/standardstyle.css
+++ b/testsites/standardstyle.css
@@ -27,10 +27,19 @@ table {
   width: 800px;
 }
 
-#aboutdiv {
+div.clearbox {
   padding: 10px;
   margin-left: auto;
   margin-right: auto;
   width: 800px;
   opacity: 0%;
 }
+
+div.clearbox p {
+  color: blue;
+  padding: 10px;
+}
+
+
+
+
