--- a/testsites/standardstyle.css
+++ b/testsites/standardstyle.css
@@ -15,7 +15,9 @@ p {
 
 table {
   background-color: lightblue;
-  border-spacing: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 800px;
 }
 
 #main-body {
