--- a/testsites/standardstyle.css
+++ b/testsites/standardstyle.css
@@ -7,10 +7,13 @@ body {
 h1 {
   color: navy;
   text-align: center;
+  font: monospace;
+  font-weight: bold;
 }
 
 p {
   color: blue;
+  font: monospace;
 }
 
 table {
