--- a/testsites/standardstyle.css
+++ b/testsites/standardstyle.css
@@ -48,14 +48,14 @@ table {
 
 #mylike1 {
   float: left;
-  padding-left: 100px;
-  width: 50px;
+  padding-left: 30%;
+  width: 200px;
 }
 
 #mylike2 {
   float: right;
-  padding-right: 100px;
-  width: 50px;
+  padding-right: 30%;
+  width: 200px;
 }
 
 
