--- a/testsites/standardstyle.css
+++ b/testsites/standardstyle.css
@@ -48,12 +48,14 @@ table {
 
 #mylike1 {
   float: left;
+  margin-top: 15px;
   padding-left: 30%;
   width: 200px;
 }
 
 #mylike2 {
   float: right;
+  margin-top: 15px;
   padding-right: 30%;
   width: 200px;
 }
